--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,33 +11,33 @@
     tools:context=".activity.MainActivity">
 
     <Button
-        android:id="@+id/btnListContact"
+        android:id="@+id/btnListEmployee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
-        android:text="List Contacts"
+        android:text="List Employee"
         android:textSize="20sp"
         android:background="#0572e7"
         android:layout_margin="5dp"
         android:textColor="#ffffff"/>
 
     <Button
-        android:id="@+id/btnSearchContact"
+        android:id="@+id/btnSearchEmployee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
-        android:text="Search Contact"
+        android:text="Search Employee"
         android:textSize="20sp"
         android:background="#0572e7"
         android:layout_margin="5dp"
         android:textColor="#ffffff"/>
 
     <Button
-        android:id="@+id/btnAddContact"
+        android:id="@+id/btnAddEmployees"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
-        android:text="Add Contact"
+        android:text="Add Employee"
         android:textSize="20sp"
         android:background="#0572e7"
         android:layout_margin="5dp"
