แก้ hint ส้วน contact_item.xml

--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -37,7 +37,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/tvEmail"
-            android:text="EMAIL"
+            android:text="AGE"
             android:textSize="12sp"
             android:layout_margin="5dp"
             android:textColor="#716969"
@@ -47,7 +47,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/tvPhone"
-            android:text="PHONE"
+            android:text="SARALY"
             android:textSize="12sp"
             android:layout_margin="5dp"
             android:textColor="#716969"
